increase number of images per page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,9 @@
         android:theme="@style/Theme.UnsplashAPICompose">
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.UnsplashAPICompose.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
